06-cluster-setup-15_100/02-netpol/03-netpol-egress-back-to-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-egress-to-database
  namespace: default
spec:
  podSelector:
    matchLabels:
      run: backend
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          role: database
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: db
